--- a/static/css/style.css
+++ b/static/css/style.css
@@ -598,16 +598,19 @@ img {
 }
 
 .precio__item {
+
     text-align: center;
     padding-bottom: 20px;
-    padding-top: 18px;
+    padding-top: 22px;
     background: #ffffff;
     padding-left: 20px;
     padding-right: 20px;
+    -webkit-box-shadow: 0px 0px 10px rgba(18, 8, 81, 0.1);
     box-shadow: 0px 0px 10px rgba(18, 8, 81, 0.1);
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
     transition: all 0.3s;
     margin-bottom: 40px;
-    border-radius: 20px;
 }
 
 .precio__item h4 {
